# ros2_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/xolobot_arm/share/ament_index/resource_index/package_run_dependencies/: xolobot_arm
install/xolobot_arm/share/ament_index/resource_index/parent_prefix_path/: xolobot_arm
install/xolobot_arm/share/xolobot_arm/: coca_levitando.world  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  luz.world  nada.world  nuevo.world  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  xolobot.world  xolobot_arm_control.launch.py
install/xolobot_arm/share/xolobot_arm/cmake/: xolobot_armConfig-version.cmake  xolobot_armConfig.cmake
install/xolobot_arm/share/xolobot_arm/environment/: ament_prefix_path.dsv  path.dsv
install/xolobot_arm/share/xolobot_arm/models/: model.config  model.sdf  model.urdf  model_minimo.urdf  untitled.dae  xolobot.urdf  xolobot_arm.sdf
install/xolobot_arm/share/xolobot_arm/models/meshes/: antebrazo_mano_izq.dae  antebrazo_mano_izq_2.dae  antebrazo_mano_izq_bak.dae  antebrazo_mano_izq_colision.dae  banda.blend  banda_terminada.blend  biceps_der.dae  biceps_izq.dae  biceps_izq_colision.dae  biceps_juntos.dae  biceps_juntos_nuevo.dae  codo_izq.dae  codo_izq_colision.dae  codo_izq_tuercas.dae  hombro_alto.dae  hombro_alto_colision.dae  hombro_bajo.dae  hombro_bajo_colision.dae  mono.dae  pulgar_1_izq.dae  pulgar_2.dae  pulgar_3.dae
install/xolobot_arm/share/xolobot_arm/models/meshes/backup/: antebrazo_mano_izq.dae  biceps_der.dae  biceps_izq.dae  biceps_juntos.dae  biceps_juntos_nuevo.dae  codo_izq.dae  hombro_alto.dae  hombro_bajo.dae  pulgar_1_izq.dae  pulgar_2.dae  pulgar_3.dae
install/xolobot_arm/share/xolobot_arm/models/meshes/dedos/: dedo_anular.blend  dedo_anular.blend1  dedo_anular_1.dae  dedo_anular_1_colision.dae  dedo_anular_2.dae  dedo_anular_2_colision.dae  dedo_anular_3.dae  dedo_anular_3_colision.dae  dedo_cordial.blend  dedo_cordial.blend1  dedo_cordial_1.dae  dedo_cordial_1_colision.dae  dedo_cordial_2.dae  dedo_cordial_2_colision.dae  dedo_cordial_3.dae  dedo_cordial_3_colision.dae  dedo_indice.blend  dedo_indice.blend1  dedo_indice_1.dae  dedo_indice_1_colision.dae  dedo_indice_2.dae  dedo_indice_2_colision.dae  dedo_indice_3.dae  dedo_indice_3_colision.dae  dedo_menique.blend  dedo_menique.blend1  dedo_menique_1.blend  dedo_menique_1.blend1  dedo_menique_1.dae  dedo_menique_1_colision.dae  dedo_menique_2.blend  dedo_menique_2.blend1  dedo_menique_2.dae  dedo_menique_2_colision.dae  dedo_menique_3.blend  dedo_menique_3.blend1  dedo_menique_3.dae  dedo_menique_3_colision.dae  mano_completa.blend  mano_completa.blend1  (+6 more)
install/xolobot_arm/share/xolobot_arm/models/textures/: metal.material  xolobot.material
install/xolobot_arm/share/xolobot_arm/models/utileria/: objeto.sdf  pelotas.sdf  soporte.sdf
install/xolobot_arm/share/xolobot_arm/worlds/: coca_levitando.world
install/xolobot_arm_server/lib/xolobot_arm_server/: xolobot_arm_server
install/xolobot_arm_server/share/ament_index/resource_index/package_run_dependencies/: xolobot_arm_server
install/xolobot_arm_server/share/ament_index/resource_index/parent_prefix_path/: xolobot_arm_server
install/xolobot_arm_server/share/xolobot_arm_server/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xolobot_arm_server/share/xolobot_arm_server/cmake/: xolobot_arm_serverConfig-version.cmake  xolobot_arm_serverConfig.cmake
install/xolobot_arm_server/share/xolobot_arm_server/environment/: ament_prefix_path.dsv  path.dsv
install/xolobot_control/share/ament_index/resource_index/package_run_dependencies/: xolobot_control
install/xolobot_control/share/ament_index/resource_index/parent_prefix_path/: xolobot_control
install/xolobot_control/share/xolobot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  xolobot_control.yaml
install/xolobot_control/share/xolobot_control/cmake/: xolobot_controlConfig-version.cmake  xolobot_controlConfig.cmake
install/xolobot_control/share/xolobot_control/config/: rrobot_control.yaml  xolobot_control.yaml
install/xolobot_control/share/xolobot_control/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/mod_interfaces/: CMakeLists.txt  package.xml
src/mod_interfaces/msg/: CoordenadasObj.msg  DimensionesObj.msg
src/modulos/: package.xml  setup.cfg  setup.py
src/modulos/modulos/: occipital.py
src/xolobot_arm/: CMakeLists.txt  package.xml  test_mesh_access.sdf
src/xolobot_arm/launch/: xolobot_arm_control.launch.py
src/xolobot_arm/models/: model.config  model.sdf  untitled.dae  xolobot.urdf  xolobot_arm.sdf
src/xolobot_arm/models/meshes/: antebrazo_mano_izq_colision.dae
src/xolobot_arm/models/textures/: xolobot.material
src/xolobot_arm/models/utileria/: objeto.sdf  objeto2.sdf  pelotas.sdf  soporte.sdf  soporte2.sdf
src/xolobot_arm/worlds/: coca_levitando.world  luz.world  nada.world  nuevo.world  xolobot.world
src/xolobot_arm_server/: CMakeLists.txt  package.xml
src/xolobot_arm_server/launch/: arm_server.launch.py
src/xolobot_arm_server/src/: SimulationController.cpp  SimulationController.h  SimulationController.hpp  error.val  startServerNode.cpp
src/xolobot_control/: CMakeLists.txt  package.xml
src/xolobot_control/config/: rrobot_control.yaml  xolobot_control.yaml
src/xolobot_control/launch/: xolobot_control.launch.py
src_lata/xolobot_arm/models/: xolobot_arm.sdf
src_lata/xolobot_arm_server/: CMakeLists.txt
src_lata/xolobot_arm_server/src/: ArmDriver.cpp  ArmDriver.h  ArmState.cpp  ArmState.h  NeuroControllerDriver.cpp  NeuroControllerDriver.h  SimpleArmDriver.cpp  SimpleArmDriver.h  SimulationController.cpp  SimulationState.cpp  SimulationState.h
src_lata/xolobot_arm_server/srv/: EvaluateDriver.srv
(+28 files in other folders)
