<?xml version="1.0"?>
<package format="2">
  <name>xolobot_arm</name>
  <version>0.0.0</version>
  <description>The xolobot_arm package</description>
  <maintainer email="mariana@todo.todo">mariana</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>hardware_interface</depend>
  <depend>robot_state_publisher</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros2_control</build_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <depend>gz-ros2-control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
