<?xml version="1.0"?>
<package format="3">
  <name>xolobot_arm</name>
  <version>0.0.0</version>
  <description>The xolobot_arm package</description>
  <maintainer email="antonio@todo.todo">Antonio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
