<?xml version="1.0"?>
<package format="2">
  <name>xolobot_arm_server</name>
  <version>0.0.0</version>
  <description>The xolobot_arm_server package</description>
  <maintainer email="monica@cua.uam.mx">moni</maintainer>
  <license>TODO</license>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fmt</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>fmt</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
