<package format="3">
  <name>xolobot_arm_server</name>
  <version>0.1.0</version>
  <description>Servidor de control para el brazo robótico Xolobot</description>
  <maintainer email="monica@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>xolobot_arm</depend>
  <depend>xolobot_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
