<?xml version="1.0"?>
<package format="2">
  <name>xolobot_control</name>
  <version>0.0.0</version>
  <description>The xolobot_control package</description>

  <maintainer email="monica@todo.todo">antonio</maintainer>

  <license>TODO</license>

  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <depend>gazebo_ros</depend>
  <depend>hardware_interface</depend>

  <depend>ros2_controllers</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <build_depend>controller_interface</build_depend>
  <build_depend>ros2_control</build_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>ros2_control</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
