<?xml version="1.0"?>
<package format="3">
  <name>xolobot_control</name>
  <version>0.0.0</version>
  <description>control</description>
  <maintainer email="monica@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>yaml_cpp_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
